# errs-springboot

./: .gitignore  Cargo.toml  README.md
.fleet/: run.json
backend/: mvnw.cmd  pom.xml
backend/src/main/resources/: application-dev.yaml  application.yaml  exclude-paths.json
backend/src/main/resources/mapper/: AccountMapper.xml  Login.xml
errs-pc/: index.html  package.json  vite.config.js
errs-pc/.fleet/: run.json
errs-pc/src/: App.vue  main.js
errs-pc/src-tauri/: Cargo.toml  tauri.conf.json
errs-pc/src-tauri/capabilities/: default.json
errs-pc/src-tauri/src/: http_client.rs  lib.rs  main.rs  utils.rs
errs-pc/src-tauri/src/utils/: gpu_utils.rs  img_utils.rs  mac_utils.rs  theme_utils.rs
errs-pc/src/assets/script/: callConflateImg.ts
errs-pc/src/components/: Loading.vue  search.vue  user.vue  xButton.vue
errs-pc/src/components/account/: Account.vue
errs-pc/src/components/checkbox/: GPUCheckbox.vue  SystemCheckbox.vue
errs-pc/src/components/login/: LoginDarkPanle.vue  LoginLightPanle.vue
errs-pc/src/components/message/: Message.vue  Toast.ts
errs-pc/src/components/theme_model/: DarkTheme.vue  LightTheme.vue
errs-pc/src/net/: get.ts  post.js
errs-pc/src/net/account/: forgot_password.ts  login.ts  logout.ts  register.ts  validate_token.ts
errs-pc/src/net/ai/: get.ts
errs-pc/src/net/book/: get_book.ts  insert.ts  score.ts  validate_like.ts
errs-pc/src/net/explore/: get_book.ts
errs-pc/src/net/games/: delete.ts  get.ts  get_top.ts  insert.ts
errs-pc/src/net/movie/: get.ts  insert.ts
errs-pc/src/net/music/: get.ts  update.ts
errs-pc/src/pages/: LeftPanel.vue  RightPanel.vue
errs-pc/src/pages/content/: Books.vue  Explore.vue  Games.vue  Music.vue  RevoCatAI.vue  Search.vue  Setting.vue  Videos.vue
errs-pc/src/pages/content/books/: Index.vue
errs-pc/src/script/: callConflateImg.ts  selectMenu.ts
errs-pc/src/util/: Theme.ts
fontend/: .gitignore  auto-imports.d.ts  components.d.ts  index.html  package-lock.json  package.json  vite.config.js
fontend/.fleet/: run.json
fontend/src/: App.vue  main.js
fontend/src/net/: Post.js  post.js  token.js.ts  token.ts
fontend/src/net/account/: Login.js  Register.js  forgot-password.js  get.ts  login.js  logout.js  register.js
fontend/src/net/admin-home/: get.ts
fontend/src/net/book/: delete.ts  get.ts
fontend/src/net/game/: delete.ts  get.ts
fontend/src/net/movie/: delete.ts  get.ts
fontend/src/net/music/: delete.ts  get.ts
fontend/src/net/user/: get.ts  update.ts
fontend/src/pages/: Home.vue  Index.vue
fontend/src/pages/account/: CommonLayout.vue  ForgotPassword.vue  Login.vue  Register.vue
fontend/src/pages/index/: LeftMenu.vue
fontend/src/router/: router.js
(+363 files in other folders)
