[package]
name = "RevoCat"
version = "0.1.1"
description = "RevoCat is a PC app that recommends games, books, and music!"
authors = ["alexcat315"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "errs_pc_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.3", features = [ "macos-private-api", "unstable"] }
tauri-plugin-opener = "2.2.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
window-vibrancy = "0.5.3"
tauri-plugin-http = "2.2.0"
reqwest = "0.12.12"
image = "0.25.5"
png = "0.17.16"
tauri-plugin-store = "2.2.0"
dark-light = "2.0.0"
tauri-plugin-shell = "2.2.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
# tauri-plugin-window-vibrancy = "0.4.0"  # Windows/macOS特效支持
tauri-plugin-store = { version = "2.0.0-rc.4" }
tauri-plugin-http = { version = "2.0.0-rc.6" }            # HTTP客户端
tauri-plugin-opener = "2.2.5"           # 外部打开
md5 = "0.7.0"               # MD5 哈希计算
sha2 = "0.10.8"     # 哈希算法库
serde = { version = "1.0", features = ["derive"] }  # 序列化支持
get_if_addrs = "0.5.3"
